@@ -63,8 +63,9 @@ enemy_erm_zerg--spore_colony=__1__ Spore Colony
 enemy_erm_zerg--spore_colony_shortrange=__1__ Short Range Spore Colony
 enemy_erm_zerg--sunken_colony=__1__ sunken Colony
 enemy_erm_zerg--sunken_colony_shortrange=__1__ Short Range sunken Colony
-enemy_erm_zerg--overmind=__1__ Overmind
 enemy_erm_zerg--infested_cmd=__1__ Infested CC
+enemy_erm_zerg--overmind=Overmind
+
 
 #Attacks
 acid-cloud=Snare
@@ -183,7 +184,7 @@ enemy_erm_zerg-overmind=Overmind
 [tips-and-tricks-item-description]
 enemy_erm_zerg-general-info=An engineer had discovered a new specie in Nauvis' solar system!  You have found a recording about furious Zerg from a deform tank on Vulcanus. 
 enemy_erm_zerg-nydus_worms=The Zerg has parasitized the demolishers and turned them into subfamily of the nydus worm.  They puke zerg units when being attacked.  Nydus worm kills any zerg on its path. This results quicker increase in evolutions and attack points.  Killing a nydus worm increases 5000 attack points.  
-enemy_erm_zerg-planet-char=A new volcanic planet discovered in Nauvis' solar system.  Unlike Vulcanus, it's the home of the Legendary Zerg forces.\n\nIt contains new valuable minerals and geysers which are unique on this planet.\n\nIt's work in progress, features may change in future updates.
+enemy_erm_zerg-planet-char=A new volcanic planet discovered in Nauvis' solar system.  Unlike Vulcanus, it's the home of the Legendary Zerg forces.\n\nIt contains new valuable minerals and geysers which are unique on this planet.\n\n
 enemy_erm_zerg-economy=Some spawners, at greater or higher tier, now drop Larva Eggs.  Larva eggs are used to bridge the gap for biter eggs.  They can also used for other new recipes.
 enemy_erm_zerg-overmind=Overmind is the master mind of zerg on Char.  You'll need to build PSI radar to reveal its present.  Once it's revealed, it will do everything to destroy your radar.  Defeating it yield great rewards!
 
@@ -194,5 +195,5 @@ enemy_erm_zerg--rally-the-char=Rally the Char
 
 [achievement-description]
 enemy_erm_zerg--death-start=Kill an overmind (Boss)
-enemy_erm_zerg--planet-fall=Kill an exceptional overmind (Boss)
-enemy_erm_zerg--rally-the-char=Kill a legendary overmind (Boss)
+enemy_erm_zerg--planet-fall=Kill a legendary overmind (Boss)
+enemy_erm_zerg--rally-the-char=Kill an exceptional overmind (Boss)
