@@ -4,9 +4,9 @@ Date: 2025-??-??
 
   Features:
     - Redesigned Overmind Boss, see in-game trick and tips for details
-    - Added Zerg Akira Psi Scanner to discover boss. It's only placeable on planet with zerg influence > 75%.
+    - Added Zerg Akira Psi Scanner to discover boss. It's only placeable on planet with property zerg_influence > 90%.
     - Added support for Emotional Damage system.   
-    - Added Milestone mod support for killing Overmind Boss.
+    - Added Milestone mod support for killing each tier of Overmind.
     - Added Achievements for killing Tier 1, Tier 3, Tier 5 Overmind.
     - Added tip and trick about Overmind.
 
@@ -19,6 +19,7 @@ Date: 2025-??-??
     - Changed Planet Char pressure to 4250 to avoid atomic bomb creating a lava hole. That instant kills any structure on it.
     - Overrided all recipes with max pressure of 4000 with 4500.   
     - Changed Synthetic Ultralisk pop from 5 to 4.
+    - Added tier 6 (Divine) to Advanced Target Priorities
 
   Bugfixes:    
     - Fixed nydus worm compatibility issues with LuaSegmentedUnit on 2.0.61+.    
